--- a/style.css
+++ b/style.css
@@ -1,6 +1,32 @@
-body {
-    text-align: center;
-  }
+* {
+    margin: 0px;
+    padding: 0px;
+}
+
+#sidebar{
+    position: fixed;
+    width: 200px;
+    height: 100%;
+    background: #151719;
+    left: -200px;
+    transition: all 500ms linear;
+}
+#sidebar.active {
+    left: 0px;
+}
+
+#sidebar ul li {
+    color:rgba(230, 230, 230,0.9);
+    list-style: none;
+    padding: 15px 10px;
+    border-bottom: 1px solid rgb(100,100,100, 0.3);
+}
+
+#sidebar .toggle-btn {
+    position: absolute;
+    left:230px;
+    top:20px;
+}
   
   textarea {
     width: 32%;
